--- a/class-notes/DE-02-jsx-components/src/msg/Msg.css
+++ b/class-notes/DE-02-jsx-components/src/msg/Msg.css
@@ -1,8 +1,8 @@
 .msg-img{
     border: 2px solid red;
+    width: 250px;
 }
 
-.resim2{
-    width: 510px;
-    border: 2px solid red;
+.anaSayfa{
+    text-align: center;
 }
